final mumbai commit

--- a/src/app/deal-page/main-area/main-area.component.html
+++ b/src/app/deal-page/main-area/main-area.component.html
@@ -23,6 +23,6 @@
     </div>
     <br>
     <div class="flexBox">
-        {{this.cardData.gameResult}}
+        <h3 style="color:white; font-weight: lighter;">{{this.cardData.gameResult}}</h3>
     </div>
 </div>
