--- a/src/app/deal-page/wallet/wallet.component.scss
+++ b/src/app/deal-page/wallet/wallet.component.scss
@@ -2,6 +2,7 @@
     margin-bottom: 0;
     font-weight: lighter;
     color: white;
+    vertical-align: top;
 }
 
 .flexBox{
@@ -13,9 +14,26 @@
 .currAmountSpan{
     font-size: 1.5rem;
     margin-bottom: 2rem;
+    
+}
+
+.currAmountInput{
+    height: 1.5rem;
+    text-align: center;
+    //margin-bottom: 2rem;
+    //vertical-align: top;
+    
 }
 
 span{
     color: white;
     font-weight: lighter;
+}
+
+
+
+@media (min-width:800px){
+    input{
+        width:100px;
+    }
 }
