--- a/src/app/deal-page/wallet/wallet.component.html
+++ b/src/app/deal-page/wallet/wallet.component.html
@@ -1,13 +1,23 @@
 <div class="row flexBox">
-    <div class="col-4">
-        <h6 class="wallet">Wallet</h6>
-        <span [textContent]="this.cardData.wallet | currency" class="currAmountSpan"></span>
+    <div class="col-8">
+        <div class="row">
+            <div class="col-6">
+                <h6 class="wallet">Wallet</h6>
+                <span [textContent]="this.cardData.wallet | currency" class="currAmountSpan"></span>
+            </div>
+            <div class="col-6">
+                <h6 class="wallet" style="margin-bottom: 0.4rem">Current Bet</h6>
+                <span *ngIf="this.cardData.gameActive" 
+                    [textContent]="this.cardData.bet | currency" class="currAmountSpan"></span>
+                <input nz-input class="currAmountInput" *ngIf="!this.cardData.gameActive" id="currrentBet" 
+                    #currentBet (input)="validateInput($event)" type="number" pattern="[0-9]*" inputmode="numeric" min="1" max="this.cardData.wallet" [(ngModel)]="this.cardData.bet"/>
+            </div>
+        </div>
+        
     </div>
+    
     <div class="col-4">
-        <h6 class="wallet">Current Bet</h6>
-        <span [textContent]="this.cardData.bet | currency" class="currAmountSpan"></span>
-    </div>
-    <div class="col-4">
-        <button [disabled]="this.cardData.gameActive" (click)="this.placeBet()" nz-button nzGhost nzType="default">Place Bet</button>
+        <button [disabled]="this.cardData.gameActive" (click)="this.placeBet()" 
+            nz-button nzGhost nzType="default">Place Bet</button>
     </div>
 </div>
