--- a/src/app/deal-page/deal-page.component.html
+++ b/src/app/deal-page/deal-page.component.html
@@ -4,5 +4,6 @@
     <div *ngIf="this.cardData.gameActive">
         <app-main-area></app-main-area>
     </div>
+    <app-bet-buttons></app-bet-buttons>
     
 </div>
